--- a/Damareen/MainWindow.xaml
+++ b/Damareen/MainWindow.xaml
@@ -362,12 +362,11 @@
             </Grid>
         </Grid>
 
-        <!-- Music Toggle Button -->
         <Button x:Name="MusicToggleBtn" 
                 Content="🔊" 
                 HorizontalAlignment="Right" 
-                VerticalAlignment="Bottom" 
-                Margin="0,0,30,30" 
+                VerticalAlignment="Top" 
+                Margin="0,10,20,30" 
                 Width="60" 
                 Height="60"
                 FontSize="28"
